# simplestoragering

./: .gitignore  Example.ipynb  LICENSE  MANIFEST.in  example.py  hls-II.py  main.py  pyproject.toml  readme.md  setup.py  solve_transfer_matrix.py
.github/workflows/: build_wheels.yml  publish.yml
docs/notebooks/: 01_basic_lattice.ipynb  02 Longitudinal variations of RDTs.ipynb  03_tracking_demo.ipynb
examples/: compare_n_slice.py  example_features.py  example_lattice.py  pymoo_problem_SOLEIL_nonlinear_optimization.py
simplestoragering/: CSLattice.py  CSLattice.pyi  CSLattice.pyx  Drift.pxd  Drift.py  Drift.pyi  Drift.pyx  DrivingTerms.py  DynamicAperture.py  HBend.pxd  HBend.py  HBend.pyi  HBend.pyx  NSGA_II.py  NonlinearTerms.py  Octupole.pxd  Octupole.py  Octupole.pyi  Octupole.pyx  Quadrupole.pxd  Quadrupole.py  Quadrupole.pyi  Quadrupole.pyx  RFCavity.pxd  RFCavity.py  RFCavity.pyi  RFCavity.pyx  Sextupole.pxd  Sextupole.py  Sextupole.pyi  Sextupole.pyx  Touschek_Piwinski.py  __init__.py  c_functions.pxd  c_functions.pyx  components.pxd  components.py  components.pyi  components.pyx  constants.py  (+21 more)
simplestoragering/atintegrators/: BndMPoleSymplectic4Pass.c  BndMPoleSymplectic4RadPass.c  BndStrMPoleSymplectic4Pass.c  RFCavityPass.c  StrMPoleSymplectic4Pass.c  StrMPoleSymplectic4RadPass.c  atconstants.h  atphyslib.c  attrackfunc.c  diff_bend_fringe.c  diff_bnd_kick.c  diff_drift.c  diff_exactdrift.c  diff_str_exactkick.c  diff_str_kick.c  driftkickrad.c
simplestoragering_cython/: CSLattice.pyx  Drift.pyx  DrivingTerms.py  DynamicAperture.py  HBend.pxd  HBend.pyx  Octupole.pxd  Octupole.pyx  Quadrupole.pxd  Quadrupole.pyx  Sextupole.pxd  Sextupole.pyx  __init__.py  c_functions.pxd  c_functions.pyx  components.pxd  components.pyx  exceptions.py  functions.py  globalvars.pxd  line_matrix.pxd  line_matrix.pyx  plotlib.py  track.pyx
tests/: HOA_7BA_lattice.py  conftest.py  example_7BA_lattice.py  test_ring_parameters.py
