[build-system]
requires = ["setuptools >= 61.0", "wheel", "Cython", "numpy>=1.18,<2"]
build-backend = "setuptools.build_meta"

[project]
name = "simplestoragering"
version = "0.0.3"
authors = [
  { name="Bingfeng WEI", email="wbf2016@mail.ustc.edu.cn" },
]
description = "simple storage ring for single particle dynamics simulation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.18,<2",
  "matplotlib>3.4.0",
  "PyNAFF",
  "scipy",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/wei0852/simplestoragering"
Repository = "https://github.com/wei0852/simplestoragering.git"
Issues = "https://github.com/wei0852/simplestoragering/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux_* pp*"
test-command = "python -c \"import simplestoragering as ssr; print(ssr.__name__)\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
